Fixed alignment issues

--- a/src/App/ui/ExperienceBlurb/ExperienceBlurb.scss
+++ b/src/App/ui/ExperienceBlurb/ExperienceBlurb.scss
@@ -25,7 +25,6 @@
 }
 
 .description{
-  margin-top: 10px;
   font-size: 16px;
 }
 
